2023-10-01  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\LMTX): new abbreviation.
	(\tburl, \tbsurl, \tbhurl) [!hyperref]: try \let instead of \def,
	so \def\url{\tbsurl} might still work.

2023-09-29  Karl Berry  <karl@freefriends.org>

	* tugboat.bst (format.month): new fn to handle outputting 01..12
        as "Jan.".."Dec.".
        (format.date): use it.

2023-09-20  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx [! \tubomithyphenations]:
	\InputIfFileExists{ushyphex.tex}.
	(\hyphenation): simply/correct list per ushyphex.tex.

2023-08-27  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\l@section): use \tubtypesetpageno.
	(\@oddhead, \@evenhead): likewise.
	(\tubtypesetpageno): new macro to typeset the (possibly draft)
	page number.
	(\thepage): no longer redefine this; giving up on typesetting
	draft page numbers with "?" in cross-references.

2023-08-24  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\TikZ): italic correction before the {\em k},
	in case of use in italic/slanted contexts.

2023-08-21  Karl Berry  <karl@freefriends.org>

	* ltubguid.ltx (Bibliography): make list of editorial bst
	fields into a description list.

	* tugboat.dtx (\dblfloatpagefraction, et al.): set so that
	figures don't go to a float page so soon.
	(\abovecaptionskip): reduce again, to 3pt.

2023-08-20  Karl Berry  <karl@freefriends.org>

	* Makefile (clean): add (simple) target.

2023-08-18  Karl Berry  <karl@freefriends.org>

	* tugboat.bst (pagesnodashify): new option to avoid autoconversion
	of - to -- in the pages field; useful when the pages field refers
	to another article, as in pages="{\thisissuepageref{beeton-basic}}".
	* tubibpages.tex: new test file.
	* tubib.bib: add test entries.
	* tubbib*: rename to tubib*, adjust references to tubbib.bib.
	* Makefile (checkbib): add test; adjust names.
	* ltubguid.ltx: document.	

2023-08-16  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\l@section): a little \rightskip, and no hyphens.
	Doc fixes.