@@ -1,5 +1,8 @@
 % $Id$
-% Public domain (from tb136inn).
+% Public domain.
+
+
+% This one from tb136inn.
 @misc{typeed,
  title          = {{Typeset a page in under 10 minutes in InDesign}},
  autor          = {{{Type-Ed}}},
@@ -30,4 +33,33 @@
  year    = {1999},
  pages   = {A-B},
  pagesnodashify = 1,
+}
+
+@article{nummonth,
+  title = "Numeric months are logical but annoying",
+  author = {Chris Doe},
+  journal = {Journal of Silly Questions},
+  year = {2023},
+  month = 3,
+  volume = 44,
+  number = 3,
+}
+
+@article{nummonthzero,
+  title = "Numeric months are annoying but logical",
+  author = {Terry Doe},
+  journal = {Journal of Silly Questions},
+  year = {2023},
+  month = {03},
+  volume = 44,
+  number = 3,
+}
+
+@article{jtitle,
+  title = "journaltitle field considered harmful",
+  author = {Chris Doe},
+  journaltitle = {TUGboat},
+  year = {2023},
+  volume = 44,
+  number = 3,
 }
