@@ -1,0 +1,6 @@
+\documentclass{ltugboat}
+\begin{document}
+\bibliographystyle{tugboat}
+\nocite{nummonth,nummonthzero}
+\bibliography{tubib}
+\end{document}
